# artifact-keeper

./: .clippy.toml  .env.example  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  RELEASING.md  docker-compose.local-dev.yml  docker-compose.yml
.cargo/: audit.toml
.githooks/: pre-commit  pre-push
.sqlx/: query-084a7d2bf651f0102019a94a426b31351bafddc38cf6262d74bfce0613506e1a.json  query-0a041b5e9aef814db159e5bc317896b2485374c37e2a0c9c23d99ea372b816e3.json  query-0a72047fbd35cb683832d4cff71c341947e375a6062d7f31abbb3482999e1067.json  query-111e09516e05188ef845d09448da4e00baeadf8a48eb44cc5231403844753a06.json  query-1897987d3a8a408f7e3d8ec20e272dae4399c34081f5f1e8638f8f6ca1e6da76.json  query-1b9435a1ac07dd5f6fdf7cffad0de6fe8f7a193d6eec273a526992a18b93bf83.json  query-1eb7603bed1c768b519bfdfb195112c6a582048f218bee641f9e395483dfb54f.json  query-203c2d53c3376349154b749e160c0ab96b7eedfccd0989d3def4c24005d731e7.json  query-270eae7d8f94f43c9fb707bad15f97638e83c5ac1acf52ea3ee8ab1dde6f2a78.json  query-2a944759e9099f39127761ded659acc311a441431867df5193620660f3650f6a.json  query-2b57c5c71f51bbbc7fbc15741c605f1be94c06991a14511ddbaefb3830ec2925.json  query-3540b5648376790e380ff93bcce116e898550c5a034f2fad14dd53585986a91e.json  query-4b3d02d4333f4656cd612f3145fe6d4512cdd027ee199a7ca4362700b888d834.json  query-4c6b7a41f7d09ea75790e7e4205071ac574ce519978c794d4a960931be235d48.json  query-4d0331821000e8d59726256ff25115715a969f379b1f6675329dec38c90981c9.json  query-4da1aac0eeada63f5267369bee46005b9ec4f79906c74295381f2f0d0f821cf2.json  query-516a4af627c5cb19242ffe3fc7919000ca57da91e369b5539d16340efcb2ba22.json  query-525e4676b12ac3c15819a8c86577c7ecffec2fc165b6f03664c1aca5ab0e0b37.json  query-5e1b0ec0b89c7ff5e9d3c9ee7faecc0bb5d72db2bdae1c8549047ec97810bd7c.json  query-5f04be7b4faa7821726c4967c586431e37f0bfccede6588ff93b3145f6e5a284.json  query-5fc15186cc994ecaae39dff33922c15297ec9deacb49d2a5c2f67a70e9cd2161.json  query-6cb1106c2314ccd4f75f47fa62cd92610caab2d0c31b11c85b0c05e8f1c341d2.json  query-7341e2eb7cfde437182fb89cb9881700b6f29c9b051d7c98e74db37d6ec1eb8e.json  query-8094614706a939e98d6116d06c1a528189206007f9b996a748dcc9623628a587.json  query-80c785a598ca81d03d2bd1feb08ad3aa47a5632c0eba01c41a1c1de451c2bd64.json  query-85538eff744b81172f106545e6a4e58c353def584cff50f193acfa60954f213b.json  query-87ded025f69f71377101323a3b6c252733a904f70b62ea7ae134e91b16cd89bb.json  query-8d2aa0c023a10b56cb38adfbc590365e12bb6e0a1476759a2cd6c43bd2cab939.json  query-8e0f35a69c82bf6d8cff1586c091fea907096b8829e3eb7e6d2602bdbc62302f.json  (+23 more)
backend/: Cargo.toml
backend/migrations/: 076_partial_index_running_scans.sql  083_download_tickets_cascade.sql  085_scan_packages.sql  087_scan_packages_fk_inventory_status.sql  088_validate_scan_packages_fk.sql  089_upload_chunks_status_uploading.sql  100_oidc_enhancements.sql  108_artifacts_filename_index.sql  110_artifacts_repo_path_pattern_ops.sql  112_deprecate_cve_history.sql  135_seed_user_role.sql  138_scanner_service_account.sql  139_saml_use_absolute_acs_url.sql  146_age_gate.sql  149_upload_chunks_claimed_at.sql  151_download_telemetry_ip_index.sql  152_artifact_versions.sql  153_audit_correlation_text.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs  migration_repair.rs
backend/src/api/: extractors.rs  mod.rs  openapi.rs  routes.rs  validation.rs
backend/src/api/handlers/: admin.rs  admin_security.rs  age_gate.rs  alpine.rs  ansible.rs  approval.rs  artifact_labels.rs  artifacts.rs  auth.rs  builds.rs  cargo.rs  chef.rs  ci_auth_admin.rs  cocoapods.rs  composer.rs  conan.rs  conda.rs  cran.rs  curation.rs  debian.rs  email_subscriptions.rs  gitlfs.rs  goproxy.rs  groups.rs  helm.rs  hex.rs  huggingface.rs  incus.rs  jetbrains.rs  lifecycle.rs  maven.rs  maven_proxy.rs  migration.rs  mod.rs  npm.rs  nuget.rs  oci_v2.rs  packages.rs  peers.rs  permissions.rs  (+36 more)
backend/src/api/middleware/: auth.rs  download_telemetry.rs  guest_access.rs  mod.rs  rate_limit.rs  security_headers.rs  setup.rs  tracing.rs
backend/src/formats/: cocoapods.rs  maven.rs  npm.rs  pypi.rs
backend/src/grpc/: auth_interceptor.rs
backend/src/models/: access_scope.rs  artifact.rs  audit_log.rs  mod.rs  repository.rs  security.rs
backend/src/services/: age_gate_service.rs  artifact_metadata.rs  artifact_service.rs  artifactory_client.rs  audit_service.rs  auth_config_service.rs  auth_service.rs  cache_classifier.rs  cluster_lock.rs  declared_dependencies.rs  dependency_track_service.rs  grype_scanner.rs  health_monitor_service.rs  http_client.rs  image_scanner.rs  incus_scanner.rs  ldap_service.rs  lifecycle_service.rs  manifest_blob_refs_backfill.rs  metrics_service.rs  migration_service.rs  migration_worker.rs  mod.rs  nexus_client.rs  npm_packument_cache.rs  oidc_service.rs  openscap_scanner.rs  peer_instance_service.rs  policy_service.rs  proxy_hydration.rs  proxy_service.rs  quarantine_service.rs  repository_service.rs  saml_service.rs  sbom_service.rs  scan_result_service.rs  scanner_adapter_client.rs  scanner_service.rs  scheduler_service.rs  search_service.rs  (+12 more)
backend/src/storage/: azure.rs  filesystem.rs  gcs.rs  mod.rs  s3.rs
backend/tests/: age_gate_tests.rs  composer_packages_index_tests.rs  conan_error_paths_tests.rs  incus_upload_tests.rs  integration_tests.rs  lifecycle_policy_tests.rs  maven_virtual_groupid_shadowing_test.rs  migration_storage_path_tests.rs  oci_chunked_upload_cross_repo_tests.rs  oci_packages_index_tests.rs  oci_virtual_resolution_tests.rs  optional_auth_deactivation_tests.rs  pypi_proxy_upload_time_tests.rs  s3_integration.rs  sbom_cached_artifact_not_analyzable_tests.rs  scan_dedup_short_circuit_tests.rs  scan_dedup_zero_findings_ttl_tests.rs  scan_policy_validation_tests.rs  search_sort_size_tests.rs  security_regression_tests.rs  sso_oidc_login_callback_e2e_tests.rs  sso_saml_acs_e2e_tests.rs  storage_backend_tests.rs  streaming_invariant.rs  stuck_scan_janitor_tests.rs  swift_virtual_lookup_tests.rs  users_password_routing_tests.rs  virtual_members_duplicate_test.rs
backend/tests/common/: mod.rs  sso_support.rs
docker/: init-dtrack.sh  (+6 more)
(+37 files in other folders)
