[package]
name = "artifact-keeper-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "artifact-keeper"
path = "src/main.rs"

[features]
vendored-openssl = ["openssl/vendored"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc"]
profiling = ["jemalloc", "dep:tikv-jemalloc-ctl", "dep:tikv-jemalloc-sys", "tikv-jemallocator/profiling"]

[dependencies]
openssl = { workspace = true, optional = true }
# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Authentication
jsonwebtoken.workspace = true
bcrypt.workspace = true

# Checksums
sha2.workspace = true
md-5.workspace = true
sha1.workspace = true
hmac.workspace = true
blake2 = "0.10"

# Encryption
aes-gcm.workspace = true
zeroize.workspace = true

# S3 storage using Apache object_store crate
object_store.workspace = true

# HTTP types (presigned URL methods)
http.workspace = true
http-body-util.workspace = true

# TLS (explicit provider selection for rustls 0.23+)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Logging/Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"

# OpenTelemetry
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-http.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

# Metrics
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Config
dotenvy.workspace = true

# UUID
uuid.workspace = true

# Time
chrono.workspace = true
cron.workspace = true

# HTTP client
reqwest.workspace = true

# URL encoding
serde_urlencoded.workspace = true

# Async streams
futures.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
# Streaming multipart reader (nuget push: parse the dotnet client's
# multipart/form-data envelope off the body stream without buffering).
multer = "3.1"

# CLI
clap.workspace = true

# Additional
async-trait = "0.1"
async-stream = "0.3"
hex = "0.4"
moka.workspace = true
redis.workspace = true
rand = "0.9"
rand08 = { package = "rand", version = "0.8" }
pgp = "0.14.2"

# Format parsing
quick-xml = { version = "0.41", features = ["serialize"] }
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1"
mime_guess = "2.0"
zip = "8.5"
toml = "0.8"
serde_yaml = "0.9"
regex = "1.11"
once_cell = "1"
bzip2 = "0.6"
zstd = "0.13"
rmp-serde = "1.3"

# WASM runtime
wasmtime.workspace = true
wasmtime-wasi.workspace = true

# Git operations
git2.workspace = true

# Base64 encoding
base64 = "0.22"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }

# Ed25519 signature verification for plugin supply-chain trust.
# Verifies a detached signature over the raw WASM bytes against an
# operator-provisioned trusted public key before a plugin is installed.
ed25519-dalek = "2"

# Search engine
opensearch = { workspace = true }

# Temp files
tempfile = "3.27"

# Memory-mapped scan inputs: lets a multi-GiB artifact be staged to disk and
# handed to scanners as file-backed (kernel-reclaimable) pages instead of anon
# heap. Pairs with `Bytes::from_owner`.
memmap2 = "0.9"

# Directory walking
walkdir = "2.5"
rsa = { version = "0.9", features = ["sha2"] }
urlencoding = "2.1.3"
url.workspace = true
ldap3 = "0.11"
bergshamra = { workspace = true }
native-tls = "0.2"

# OpenAPI
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true

# gRPC
tonic.workspace = true
tonic-reflection.workspace = true
prost.workspace = true
prost-types.workspace = true
zxcvbn = "3"

# SMTP email delivery
lettre.workspace = true

# Allocators
mimalloc = { version = "0.1", optional = true }
[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["stats"] }
tikv-jemalloc-sys = { version = "0.6", optional = true }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio-test = "0.4"
axum-test = "18"
wiremock = "0.6"
